tools/header.h

typedef double cpFloat;
typedef struct cpVect
{
    cpFloat x, y;
} cpVect;
typedef void *cpDataPointer;
typedef unsigned char cpBool;
typedef struct cpTransform
{
    cpFloat a, b, c, d, tx, ty;
} cpTransform;
typedef struct cpSpace cpSpace;
typedef struct cpArbiter cpArbiter;
typedef struct cpShape cpShape;
typedef struct cpConstraint cpConstraint;
typedef struct cpBody cpBody;
typedef struct cpConstraintClass {
	cpConstraintPreStepImpl preStep;
	cpConstraintApplyCachedImpulseImpl applyCachedImpulse;
	cpConstraintApplyImpulseImpl applyImpulse;
	cpConstraintGetImpulseImpl getImpulse;
} cpConstraintClass;
/// Callback function type that gets called before solving a joint.
// typedef void (*cpConstraintPreSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPreSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
/// Callback function type that gets called after solving a joint.
//typedef void (*cpConstraintPostSolveFunc)(cpConstraint *constraint, cpSpace *space);
typedef void (*cpConstraintPostSolveFuncD)(cpConstraint *constraint, cpSpace *space, uint64_t callbackId);
struct cpConstraint {
	const cpConstraintClass *klass;
	
	cpSpace *space;
	
	cpBody *a, *b;
	cpConstraint *next_a, *next_b;
	
	cpFloat maxForce;
	cpFloat errorBias;
	cpFloat maxBias;
	
	cpBool collideBodies;
	
	cpConstraintPreSolveFuncD preSolve;
	cpConstraintPostSolveFuncD postSolve;
	
	cpDataPointer userData;
};
/// Rigid body velocity update function type.
//typedef void (*cpBodyVelocityFunc)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt);
typedef void (*cpBodyVelocityFuncD)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt, uint64_t callbackId);
/// Rigid body position update function type.
// typedef void (*cpBodyPositionFunc)(cpBody *body, cpFloat dt);
typedef void (*cpBodyPositionFuncD)(cpBody *body, cpFloat dt, uint64_t callbackId);
struct cpBody {
	// Integration functions
	cpBodyVelocityFuncD velocity_func;
	cpBodyPositionFuncD position_func;
	
	// mass and it's inverse
	cpFloat m;
	cpFloat m_inv;
	
	// moment of inertia and it's inverse
	cpFloat i;
	cpFloat i_inv;
	
	// center of gravity
	cpVect cog;
	
	// position, velocity, force
	cpVect p;
	cpVect v;
	cpVect f;
	
	// Angle, angular velocity, torque (radians)
	cpFloat a;
	cpFloat w;
	cpFloat t;
	
	cpTransform transform;
	
	cpDataPointer userData;
	
	// "pseudo-velocities" used for eliminating overlap.
	// Erin Catto has some papers that talk about what these are.
	cpVect v_bias;
	cpFloat w_bias;
	
	cpSpace *space;
	
	cpShape *shapeList;
	cpArbiter *arbiterList;
	cpConstraint *constraintList;
	
	struct {
		cpBody *root;
		cpBody *next;
		cpFloat idleTime;
	} sleeping;
};
struct cpShape
{
    const cpShapeClass *klass;

    cpSpace *space;
    cpBody *body;
    struct cpShapeMassInfo massInfo;
    cpBB bb;

    cpBool sensor;

    cpFloat e;
    cpFloat u;
    cpVect surfaceV;

    cpDataPointer userData;

    cpCollisionType type;
    cpShapeFilter filter;

    cpShape *next;
    cpShape *prev;

    cpHashValue hashid;
};
struct cpArbiter
{
    cpFloat e;
    cpFloat u;
    cpVect surface_vr;

    cpDataPointer data;

    const cpShape *a, *b;
    cpBody *body_a, *body_b;
    struct cpArbiterThread thread_a, thread_b;

    int count;
    struct cpContact *contacts;
    cpVect n;

    // Regular, wildcard A and wildcard B collision handlers.
    cpCollisionHandler *handler, *handlerA, *handlerB;
    cpBool swapped;

    cpTimestamp stamp;
    enum cpArbiterState state;
};
struct cpSpace
{
    int iterations;

    cpVect gravity;
    cpFloat damping;

    cpFloat idleSpeedThreshold;
    cpFloat sleepTimeThreshold;

    cpFloat collisionSlop;
    cpFloat collisionBias;
    cpTimestamp collisionPersistence;

    cpDataPointer userData;

    cpTimestamp stamp;
    cpFloat curr_dt;

    cpArray *dynamicBodies;
    cpArray *staticBodies;
    cpArray *rousedBodies;
    cpArray *sleepingComponents;

    cpHashValue shapeIDCounter;
    cpSpatialIndex *staticShapes;
    cpSpatialIndex *dynamicShapes;

    cpArray *constraints;

    cpArray *arbiters;
    cpContactBufferHeader *contactBuffersHead;
    cpHashSet *cachedArbiters;
    cpArray *pooledArbiters;

    cpArray *allocatedBuffers;
    unsigned int locked;

    cpBool usesWildcards;
    cpHashSet *collisionHandlers;
    cpCollisionHandler defaultHandler;

    cpBool skipPostStep;
    cpArray *postStepCallbacks;

    cpBody *staticBody;
    cpBody _staticBody;
};
//typedef void (*cpBodyShapeIteratorFunc)(cpBody *body, cpShape *shape, void *data);
typedef void (*cpBodyShapeIteratorFuncD)(cpBody *body, cpShape *shape, void *data, uint64_t callbackId);
// typedef void (*cpBodyConstraintIteratorFunc)(cpBody *body, cpConstraint *constraint, void *data);
typedef void (*cpBodyConstraintIteratorFuncD)(cpBody *body, cpConstraint *constraint, void *data, uint64_t callbackId);
//typedef void (*cpBodyArbiterIteratorFunc)(cpBody *body, cpArbiter *arbiter, void *data);
typedef void (*cpBodyArbiterIteratorFuncD)(cpBody *body, cpArbiter *arbiter, void *data, uint64_t callbackId);
// typedef cpFloat (*cpDampedRotarySpringTorqueFunc)(struct cpConstraint *spring, cpFloat relativeAngle);
typedef cpFloat (*cpDampedRotarySpringTorqueFuncD)(struct cpConstraint *spring, cpFloat relativeAngle, uint64_t callbackId);
typedef struct cpDampedRotarySpring cpDampedRotarySpring;
struct cpDampedRotarySpring {
	cpConstraint constraint;
	cpFloat restAngle;
	cpFloat stiffness;
	cpFloat damping;
	cpDampedRotarySpringTorqueFuncD springTorqueFunc;
	
	cpFloat target_wrn;
	cpFloat w_coef;
	
	cpFloat iSum;
	cpFloat jAcc;
	uint64_t callbackId;
};
 cpFloat cpBodyGetTorque(const cpBody *body);
 void cpBodySetTorque(cpBody *body, cpFloat torque);
 cpVect cpBodyGetRotation(const cpBody *body);
 cpDataPointer cpBodyGetUserData(const cpBody *body);
 void cpBodySetUserData(cpBody *body, cpDataPointer userData);
 void cpBodySetVelocityUpdateFunc(cpBody *body, cpBodyVelocityFuncD velocityFunc, uint64_t callbackId);
 void cpBodySetPositionUpdateFunc(cpBody *body, cpBodyPositionFuncD positionFunc, uint64_t callbackId);
 void cpBodyUpdateVelocity(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt, uint64_t callbackId);
 void cpBodyUpdatePosition(cpBody *body, cpFloat dt,  uint64_t callbackId);
 cpVect cpBodyLocalToWorld(const cpBody *body, const cpVect point);
 cpVect cpBodyWorldToLocal(const cpBody *body, const cpVect point);
 void cpBodyApplyForceAtWorldPoint(cpBody *body, cpVect force, cpVect point);
 void cpBodyApplyForceAtLocalPoint(cpBody *body, cpVect force, cpVect point);
 void cpBodyApplyImpulseAtWorldPoint(cpBody *body, cpVect impulse, cpVect point);
 void cpBodyApplyImpulseAtLocalPoint(cpBody *body, cpVect impulse, cpVect point);
 cpVect cpBodyGetVelocityAtWorldPoint(const cpBody *body, cpVect point);
 cpVect cpBodyGetVelocityAtLocalPoint(const cpBody *body, cpVect point);
 cpFloat cpBodyKineticEnergy(const cpBody *body);
 void cpBodyEachShape(cpBody *body, cpBodyShapeIteratorFuncD func, void *data, uint64_t callbackId);
 void cpBodyEachConstraint(cpBody *body, cpBodyConstraintIteratorFuncD func, void *data, uint64_t callbackId);
 void cpBodyEachArbiter(cpBody *body, cpBodyArbiterIteratorFuncD func, void *data, uint64_t callbackId);
 cpBool cpConstraintIsDampedRotarySpring(const cpConstraint *constraint);
 cpDampedRotarySpring* cpDampedRotarySpringAlloc(void);
 cpDampedRotarySpring* cpDampedRotarySpringInit(cpDampedRotarySpring *joint, cpBody *a, cpBody *b, cpFloat restAngle, cpFloat stiffness, cpFloat damping);
 cpConstraint* cpDampedRotarySpringNew(cpBody *a, cpBody *b, cpFloat restAngle, cpFloat stiffness, cpFloat damping);