lib/src/bindings.dart


  late final _cpBodyGetTorquePtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyGetTorque');
  late final _cpBodyGetTorque = _cpBodyGetTorquePtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodySetTorque(
    ffi.Pointer<cpBody> body,
    double torque,
  ) {
    return _cpBodySetTorque(
      body,
      torque,
    );
  }

  late final _cpBodySetTorquePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat)>>('cpBodySetTorque');
  late final _cpBodySetTorque = _cpBodySetTorquePtr.asFunction<void Function(ffi.Pointer<cpBody>, double)>();

  cpVect cpBodyGetRotation(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetRotation(
      body,
    );
  }

  late final _cpBodyGetRotationPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>)>>('cpBodyGetRotation');
  late final _cpBodyGetRotation = _cpBodyGetRotationPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>)>();

  cpDataPointer cpBodyGetUserData(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyGetUserData(
      body,
    );
  }

  late final _cpBodyGetUserDataPtr = _lookup<ffi.NativeFunction<cpDataPointer Function(ffi.Pointer<cpBody>)>>('cpBodyGetUserData');
  late final _cpBodyGetUserData = _cpBodyGetUserDataPtr.asFunction<cpDataPointer Function(ffi.Pointer<cpBody>)>();

  void cpBodySetUserData(
    ffi.Pointer<cpBody> body,
    cpDataPointer userData,
  ) {
    return _cpBodySetUserData(
      body,
      userData,
    );
  }

  late final _cpBodySetUserDataPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpDataPointer)>>('cpBodySetUserData');
  late final _cpBodySetUserData = _cpBodySetUserDataPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpDataPointer)>();

  void cpBodySetVelocityUpdateFunc(
    ffi.Pointer<cpBody> body,
    cpBodyVelocityFuncD velocityFunc,
    int callbackId,
  ) {
    return _cpBodySetVelocityUpdateFunc(
      body,
      velocityFunc,
      callbackId,
    );
  }

  late final _cpBodySetVelocityUpdateFuncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpBodyVelocityFuncD, ffi.Uint64)>>('cpBodySetVelocityUpdateFunc');
  late final _cpBodySetVelocityUpdateFunc = _cpBodySetVelocityUpdateFuncPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpBodyVelocityFuncD, int)>();

  void cpBodySetPositionUpdateFunc(
    ffi.Pointer<cpBody> body,
    cpBodyPositionFuncD positionFunc,
    int callbackId,
  ) {
    return _cpBodySetPositionUpdateFunc(
      body,
      positionFunc,
      callbackId,
    );
  }

  late final _cpBodySetPositionUpdateFuncPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpBodyPositionFuncD, ffi.Uint64)>>('cpBodySetPositionUpdateFunc');
  late final _cpBodySetPositionUpdateFunc = _cpBodySetPositionUpdateFuncPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpBodyPositionFuncD, int)>();

  void cpBodyUpdateVelocity(
    ffi.Pointer<cpBody> body,
    cpVect gravity,
    double damping,
    double dt,
    int callbackId,
  ) {
    return _cpBodyUpdateVelocity(
      body,
      gravity,
      damping,
      dt,
      callbackId,
    );
  }

  late final _cpBodyUpdateVelocityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect, cpFloat, cpFloat, ffi.Uint64)>>('cpBodyUpdateVelocity');
  late final _cpBodyUpdateVelocity = _cpBodyUpdateVelocityPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect, double, double, int)>();
  void cpBodyUpdatePosition(
    ffi.Pointer<cpBody> body,
    double dt,
    int callbackId,
  ) {
    return _cpBodyUpdatePosition(
      body,
      dt,
      callbackId,
    );
  }

  late final _cpBodyUpdatePositionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpFloat, ffi.Uint64)>>('cpBodyUpdatePosition');
  late final _cpBodyUpdatePosition = _cpBodyUpdatePositionPtr.asFunction<void Function(ffi.Pointer<cpBody>, double, int)>();

  cpVect cpBodyLocalToWorld(
    ffi.Pointer<cpBody> body,
    cpVect point,
  ) {
    return _cpBodyLocalToWorld(
      body,
      point,
    );
  }

  late final _cpBodyLocalToWorldPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodyLocalToWorld');
  late final _cpBodyLocalToWorld = _cpBodyLocalToWorldPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>();

  cpVect cpBodyWorldToLocal(
    ffi.Pointer<cpBody> body,
    cpVect point,
  ) {
    return _cpBodyWorldToLocal(
      body,
      point,
    );
  }

  late final _cpBodyWorldToLocalPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodyWorldToLocal');
  late final _cpBodyWorldToLocal = _cpBodyWorldToLocalPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>();

  void cpBodyApplyForceAtWorldPoint(
    ffi.Pointer<cpBody> body,
    cpVect force,
    cpVect point,
  ) {
    return _cpBodyApplyForceAtWorldPoint(
      body,
      force,
      point,
    );
  }

  late final _cpBodyApplyForceAtWorldPointPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpBodyApplyForceAtWorldPoint');
  late final _cpBodyApplyForceAtWorldPoint = _cpBodyApplyForceAtWorldPointPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>();

  void cpBodyApplyForceAtLocalPoint(
    ffi.Pointer<cpBody> body,
    cpVect force,
    cpVect point,
  ) {
    return _cpBodyApplyForceAtLocalPoint(
      body,
      force,
      point,
    );
  }

  late final _cpBodyApplyForceAtLocalPointPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpBodyApplyForceAtLocalPoint');
  late final _cpBodyApplyForceAtLocalPoint = _cpBodyApplyForceAtLocalPointPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>();

  void cpBodyApplyImpulseAtWorldPoint(
    ffi.Pointer<cpBody> body,
    cpVect impulse,
    cpVect point,
  ) {
    return _cpBodyApplyImpulseAtWorldPoint(
      body,
      impulse,
      point,
    );
  }

  late final _cpBodyApplyImpulseAtWorldPointPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpBodyApplyImpulseAtWorldPoint');
  late final _cpBodyApplyImpulseAtWorldPoint = _cpBodyApplyImpulseAtWorldPointPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>();

  void cpBodyApplyImpulseAtLocalPoint(
    ffi.Pointer<cpBody> body,
    cpVect impulse,
    cpVect point,
  ) {
    return _cpBodyApplyImpulseAtLocalPoint(
      body,
      impulse,
      point,
    );
  }

  late final _cpBodyApplyImpulseAtLocalPointPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>>('cpBodyApplyImpulseAtLocalPoint');
  late final _cpBodyApplyImpulseAtLocalPoint = _cpBodyApplyImpulseAtLocalPointPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpVect, cpVect)>();

  cpVect cpBodyGetVelocityAtWorldPoint(
    ffi.Pointer<cpBody> body,
    cpVect point,
  ) {
    return _cpBodyGetVelocityAtWorldPoint(
      body,
      point,
    );
  }

  late final _cpBodyGetVelocityAtWorldPointPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodyGetVelocityAtWorldPoint');
  late final _cpBodyGetVelocityAtWorldPoint = _cpBodyGetVelocityAtWorldPointPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>();

  cpVect cpBodyGetVelocityAtLocalPoint(
    ffi.Pointer<cpBody> body,
    cpVect point,
  ) {
    return _cpBodyGetVelocityAtLocalPoint(
      body,
      point,
    );
  }

  late final _cpBodyGetVelocityAtLocalPointPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>>('cpBodyGetVelocityAtLocalPoint');
  late final _cpBodyGetVelocityAtLocalPoint = _cpBodyGetVelocityAtLocalPointPtr.asFunction<cpVect Function(ffi.Pointer<cpBody>, cpVect)>();

  double cpBodyKineticEnergy(
    ffi.Pointer<cpBody> body,
  ) {
    return _cpBodyKineticEnergy(
      body,
    );
  }

  late final _cpBodyKineticEnergyPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpBody>)>>('cpBodyKineticEnergy');
  late final _cpBodyKineticEnergy = _cpBodyKineticEnergyPtr.asFunction<double Function(ffi.Pointer<cpBody>)>();

  void cpBodyEachShape(
    ffi.Pointer<cpBody> body,
    cpBodyShapeIteratorFuncD func,
    ffi.Pointer<ffi.Void> data,
    int callbackId,
  ) {
    return _cpBodyEachShape(
      body,
      func,
      data,
      callbackId,
    );
  }

  late final _cpBodyEachShapePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpBodyShapeIteratorFuncD, ffi.Pointer<ffi.Void>, ffi.Uint64)>>('cpBodyEachShape');
  late final _cpBodyEachShape = _cpBodyEachShapePtr.asFunction<void Function(ffi.Pointer<cpBody>, cpBodyShapeIteratorFuncD, ffi.Pointer<ffi.Void>, int)>();

  void cpBodyEachConstraint(
    ffi.Pointer<cpBody> body,
    cpBodyConstraintIteratorFuncD func,
    ffi.Pointer<ffi.Void> data,
    int callbackId,
  ) {
    return _cpBodyEachConstraint(
      body,
      func,
      data,
      callbackId,
    );
  }

  late final _cpBodyEachConstraintPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpBodyConstraintIteratorFuncD, ffi.Pointer<ffi.Void>, ffi.Uint64)>>('cpBodyEachConstraint');
  late final _cpBodyEachConstraint = _cpBodyEachConstraintPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpBodyConstraintIteratorFuncD, ffi.Pointer<ffi.Void>, int)>();

  void cpBodyEachArbiter(
    ffi.Pointer<cpBody> body,
    cpBodyArbiterIteratorFuncD func,
    ffi.Pointer<ffi.Void> data,
    int callbackId,
  ) {
    return _cpBodyEachArbiter(
      body,
      func,
      data,
      callbackId,
    );
  }

  late final _cpBodyEachArbiterPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpBody>, cpBodyArbiterIteratorFuncD, ffi.Pointer<ffi.Void>, ffi.Uint64)>>('cpBodyEachArbiter');
  late final _cpBodyEachArbiter = _cpBodyEachArbiterPtr.asFunction<void Function(ffi.Pointer<cpBody>, cpBodyArbiterIteratorFuncD, ffi.Pointer<ffi.Void>, int)>();

  int cpConstraintIsDampedRotarySpring(
    ffi.Pointer<cpConstraint> constraint,
  ) {
    return _cpConstraintIsDampedRotarySpring(
      constraint,
    );
  }

  late final _cpConstraintIsDampedRotarySpringPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpConstraint>)>>('cpConstraintIsDampedRotarySpring');
  late final _cpConstraintIsDampedRotarySpring = _cpConstraintIsDampedRotarySpringPtr.asFunction<int Function(ffi.Pointer<cpConstraint>)>();

  ffi.Pointer<cpDampedRotarySpring> cpDampedRotarySpringAlloc() {
    return _cpDampedRotarySpringAlloc();
  }

  late final _cpDampedRotarySpringAllocPtr = _lookup<ffi.NativeFunction<ffi.Pointer<cpDampedRotarySpring> Function()>>('cpDampedRotarySpringAlloc');
  late final _cpDampedRotarySpringAlloc = _cpDampedRotarySpringAllocPtr.asFunction<ffi.Pointer<cpDampedRotarySpring> Function()>();

  ffi.Pointer<cpDampedRotarySpring> cpDampedRotarySpringInit(
    ffi.Pointer<cpDampedRotarySpring> joint,
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double restAngle,
    double stiffness,
    double damping,
  ) {
    return _cpDampedRotarySpringInit(
      joint,
      a,
      b,
      restAngle,
      stiffness,
      damping,
    );
  }

  late final _cpDampedRotarySpringInitPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<cpDampedRotarySpring> Function(ffi.Pointer<cpDampedRotarySpring>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, cpFloat, cpFloat, cpFloat)>>(
          'cpDampedRotarySpringInit');
  late final _cpDampedRotarySpringInit =
      _cpDampedRotarySpringInitPtr.asFunction<ffi.Pointer<cpDampedRotarySpring> Function(ffi.Pointer<cpDampedRotarySpring>, ffi.Pointer<cpBody>, ffi.Pointer<cpBody>, double, double, double)>();

  ffi.Pointer<cpConstraint> cpDampedRotarySpringNew(
    ffi.Pointer<cpBody> a,
    ffi.Pointer<cpBody> b,
    double restAngle,
    double stiffness,
    double damping,
  ) {
    return _cpDampedRotarySpringNew(
      a,
      b,
      restAngle,
      stiffness,
      damping,
    );
  }
